# rechnungschecker

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  pyproject.toml  requirements.txt  test_xrechnung-report.xml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_tables.py  002_add_verification_code_fields.py  003_add_file_name_to_validation_logs.py  004_add_notes_to_validation_logs.py  005_add_api_keys_table.py  006_add_clients_table.py  007_add_webhook_tables.py  008_add_integration_settings.py  009_add_company_name_to_users.py  010_add_batch_tables.py  011_add_audit_logs.py  012_add_templates_table.py  013_add_user_notification_preferences.py  014_add_admin_field.py  015_add_google_oauth_fields.py  016_add_organizations.py  017_add_invoice_drafts.py  018_add_scheduled_validations.py  019_add_performance_indexes.py  020_add_extracted_invoice_data.py  021_add_vat_breakdown.py
app/: __init__.py  config.py  main.py
app/api/: deps.py
app/api/v1/: admin.py  analytics.py  audit.py  (+16 more)
app/core/: cache.py  database.py  datetime_utils.py  encryption.py  exceptions.py  i18n.py  limits.py  redis_cache.py  security.py
app/models/: __init__.py  api_key.py  audit.py  batch.py  client.py  extracted_invoice.py  integration.py  invoice_draft.py  organization.py  scheduled_validation.py  template.py  user.py  validation.py  webhook.py
app/schemas/: __init__.py  admin.py  api_key.py  audit.py  auth.py  batch.py  billing.py  client.py  conversion.py  datev.py  export.py  extracted_invoice.py  integration.py  invoice.py  organization.py  scheduled_validation.py  template.py  validation.py  webhook.py
app/services/: analytics.py  audit.py  invoice_extraction.py  validation_history.py
docker/: .env.prod.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml  nginx.conf
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  homepage.spec.ts  navigation.spec.ts  validation.spec.ts
frontend/public/: demo-xrechnung.xml
frontend/src/: App.tsx  main.tsx
test_files/: TEST_WORKFLOWS.md
test_files/pdf_conversion/: generate_test_pdfs.py  sample_invoice.html
test_files/xrechnung/: invalid_calculation_error.xml  invalid_malformed_xml.xml  invalid_missing_buyer_reference.xml  valid_xrechnung.xml
test_files/zugferd/: invalid_missing_seller.xml  invalid_wrong_currency.xml  valid_zugferd_en16931.xml
tests/: __init__.py  conftest.py  test_api_keys.py  test_auth.py  test_billing.py  test_clients.py  test_conversion.py  test_datev_export.py  test_export.py  test_integrations.py  test_invoice_extraction.py  test_reports.py  test_scheduled_validations.py  test_validation.py  test_webhooks.py  test_zugferd.py
tests/fixtures/: .gitkeep
(+136 files in other folders)
